<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorDarkBlue"
            android:gravity="center"
            android:text="@string/currentStTextTitle"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/currentStTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/currentStText"
            android:textColor="@color/colorBlack"
            app:autoSizeMaxTextSize="100dp"
            app:autoSizeMinTextSize="20dp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/currentStIdTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/currentStIdText"
            android:textColor="@color/colorBlack"
            app:autoSizeMaxTextSize="100dp"
            app:autoSizeMinTextSize="20dp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorDarkBlue"
            android:gravity="center"
            android:text="@string/busTextTitle"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/busTextView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="100dp"
            app:autoSizeMinTextSize="20dp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorDarkBlue"
            android:gravity="center"
            android:text="@string/destStTextTitle"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/destStTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/destStText"
            android:textColor="@color/colorBlack"
            app:autoSizeMaxTextSize="100dp"
            app:autoSizeMinTextSize="20dp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/destStIdTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/destStIdText"
            android:textColor="@color/colorBlack"
            app:autoSizeMaxTextSize="100dp"
            app:autoSizeMinTextSize="20dp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkBlue">

        <ImageButton
            android:id="@+id/STTButton"
            android:layout_width="383dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:background="@drawable/button_click"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sttbutton" />

    </FrameLayout>





</LinearLayout>